# centauri-dl

./: README.md  pyproject.toml
centauri-dl/: __main__.py  downloader.py  gui.py
